@@ -129,40 +129,39 @@
            (error-of-type 'source-program-error
              (TEXT "Invalid syntax in ~S form: ~S.")
              do
-             formpiece ) ))
+             formpiece)))
     (let ((bindlist nil)
           (reinitlist nil)
           (testtag (gensym))
-          (exittag (gensym)) )
-      (multiple-value-bind (body-rest declarations doc) (sys::parse-body body)
-        (declare (ignore doc))
+          (exittag (gensym)))
+      (multiple-value-bind (body-rest declarations) (sys::parse-body body)
         (when declarations
           (setq declarations (list (cons 'DECLARE declarations))))
         (loop
          (when (atom varclauselist)
            (if (null varclauselist)
                (return)
-               (bad-syntax varclauselist)) )
+               (bad-syntax varclauselist)))
          (let ((varclause (first varclauselist)))
            (setq varclauselist (rest varclauselist))
            (cond ((atom varclause)
-                  (setq bindlist (cons varclause bindlist)) )
+                  (setq bindlist (cons varclause bindlist)))
                  ((null (cdr varclause))
-                  (setq bindlist (cons (first varclause) bindlist)) )
+                  (setq bindlist (cons (first varclause) bindlist)))
                  ((atom (cdr varclause))
-                  (bad-syntax varclause) )
+                  (bad-syntax varclause))
                  ((null (cddr varclause))
-                  (setq bindlist (cons varclause bindlist)) )
+                  (setq bindlist (cons varclause bindlist)))
                  ((atom (cddr varclause))
-                  (bad-syntax varclause) )
+                  (bad-syntax varclause))
                  ((null (cdddr varclause))
                   (setq bindlist
                         (cons (list (first varclause) (second varclause))
-                              bindlist ) )
+                              bindlist))
                   (setq reinitlist
-                        (list* (third varclause) (first varclause) reinitlist) ) )
+                        (list* (third varclause) (first varclause) reinitlist)))
                  (t ;;(not (null (cdddr varclause)))
-                  (bad-syntax varclause) ) ) ) )
+                  (bad-syntax varclause)))))
         `(BLOCK NIL
            (,let ,(nreverse bindlist)
             ,@declarations
